# chatviz

./: .gitignore  .releaserc  CHANGELOG.md  Makefile  README.md  claude-demo.sh  omlx.sh  project.md  pyproject.toml  test_bedrock.py
.github/workflows/: release.yml
docs/: bedrock.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: sse.ts
frontend/src/components/: ChatView.tsx  ContextGrid.tsx  FilterBar.tsx  FoldingJsonViewer.tsx  JsonViewModal.tsx  MessageCard.tsx  ModelBadge.tsx  SequenceView.tsx  SystemPromptRenderer.tsx  Timeline.tsx  ToolMessagePanel.tsx  ToolsPanel.tsx
frontend/src/store/: messages.ts  timeline.ts
frontend/src/styles/: colors.ts  theme.ts
frontend/src/types/: index.ts
frontend/src/utils/: messageHelpers.ts  stage.ts
src/chatviz/: __init__.py  __main__.py  detector.py  parser.py  proxy.py  server.py  sse.py  store.py
