[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatviz"
version = "0.1.0"
description = "Real-time AI chat proxy visualizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "boto3>=1.34",
    "botocore>=1.34",
]

[project.scripts]
chatviz = "chatviz.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chatviz"]

[tool.hatch.build.targets.wheel.force-include]
"src/chatviz/static" = "chatviz/static"
