[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatviz"
version = "1.0.7"
description = "Real-time AI chat proxy visualizer"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "easytocloud", email = "info@easytocloud.com"}
]
license = {file = "LICENSE"}
keywords = ["ai", "llm", "proxy", "visualization", "anthropic", "openai", "bedrock"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "boto3>=1.34",
    "botocore>=1.34",
]

[project.urls]
Homepage = "https://github.com/easytocloud/chatviz"
Repository = "https://github.com/easytocloud/chatviz"
Issues = "https://github.com/easytocloud/chatviz/issues"
Changelog = "https://github.com/easytocloud/chatviz/blob/main/CHANGELOG.md"

[project.scripts]
chatviz = "chatviz.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chatviz"]
